# lairbnb_rs

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.sqlx/: query-79b3c08e2c7bbfcbf92a975b7becb4cba7aa8d6ebcfb11bf450d9b20770ebbd6.json
configuration/: base.yaml  production.yaml
migrations/: 20240722152344_create_registration_table.sql  20240723130142_create_rooms_table.sql  20240723144452_alter_users_table.sql  20240723154847_alter_rooms_table.sql  20240731125702_seed_user.sql  20240802170858_change_room_id_for_primary_key.sql  20240802171618_create_rooms_table.sql  20240802172704_make_account_id_not_null.sql  20240802172759_make_account_id_not_null_again.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  create_cookie.rs  get_documents_from_id.rs  lairs_on_map.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: lair_description.rs  lair_image.rs  lair_lat.rs  lair_lon.rs  lair_title.rs  mod.rs  new_lair.rs  new_subscriber.rs  subscriber_name.rs  subscriber_password.rs
src/routes/: insertions.rs  lair_insertion.rs  mod.rs  registration.rs  registrations.rs  selections.rs
src/routes/admin/: dashboard.rs  mod.rs
src/routes/admin/lair_insertion/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
src/routes/register/: get.rs  post.rs
static/: index.html  login.html  main.js  register.html  style.css
tests/: health_check.rs
tests/api/: content_insertion.rs  helpers.rs  login.rs  main.rs  registration.rs
