[package]
name = "lairbnb_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }